Mon Apr 16 18:35:36 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* python/docs/bindings.html,python/docs/examples/simpleexpand.py:
	  Document ESetIterator::get_term() instead of
	  ESetIterator::get_termname()

Mon Apr 16 18:32:37 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* csharp/util.i,php/docs/examples/simpleexpand.php4,
	  php/docs/examples/simpleexpand.php5: Change to use get_term()
	  instead of get_termname().
	* php/docs/bindings.html,ruby/docs/bindings.html,
	  tcl8/docs/bindings.html: Document ESetIterator::get_term()
	  instead of ESetIterator::get_termname()

Mon Apr 16 18:27:39 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* xapian.i: Add ESetIterator::get_term() as alias for now
	  ESetIterator::get_termname(), and mark the old get_termname as
	  deprecated.  Tidy up all comments about deprecated functions,
	  giving the version they were deprecated in.

Mon Apr 16 11:16:48 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* python/extra.i,python/pythontest.py: Add nicer ESet iterators,
	  and tests for them.

Mon Apr 16 01:08:30 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* python/extra.i,python/pythontest.py,xapian.i: Add access to the
	  collapse_key() method of mset iterators.  Add it to the new-style
	  python MSet iterator, and test it.  Add documentation strings for
	  describing the python MSetItem properties and attributes.

Mon Apr 16 00:23:20 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* python/extra.i: Rework MSet iterators: they now return an
	  MSetItem object instead of a sequence. The sequence API is
	  emulated with a _SequenceMixIn baseclass. The MSetItem object
	  allows access to all the properties returned in the list
	  previously returned, and also allows access to the collapse_count
	  property.  In addition, it evaluates the document property
	  lazily, so no work is done if we don't actually want to read it.