@@ -1,3 +1,8 @@
+Tue Apr 17 08:57:23 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* python/testsuite.py: Run tests in predicatable order, by sorting
+	  the list of tests if it's supplied as a dictionary.
+
 Mon Apr 16 18:35:36 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* python/docs/bindings.html,python/docs/examples/simpleexpand.py:
